--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <!-- Header -->
+  <!-- Header in dashboard -->
   <header>
     <div class="logo">
       <span>Taskify</span>
